--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
-VITE_GPT_API=http://urldelservidor/new-film/
+VITE_GPT_API=https://9wpykorpvl.execute-api.us-east-2.amazonaws.com/production/new-film/
+VITE_GPT_API_SWAPI=https://9wpykorpvl.execute-api.us-east-2.amazonaws.com/production/swapi/
 
-VITE_ASSISTANT_API=http://urldelservidor/swapi/
